Implemented tagging of multiple files at the same time. The result is always an intersection of the tags of all files. Another possibility would be to only change the clicked tag. Feedback?

BUG: 160157

svn path=/trunk/KDE/kdebase/apps/; revision=792518